--- a/test/fixtures/forums.yml
+++ b/test/fixtures/forums.yml
@@ -1,4 +1,7 @@
-# Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
+welcome:
+  category: misc
+  title: Welcome
+  stripped_title: welcome
 
 # one:
 #   column: value
