--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,19 +1,9 @@
-quentin:
-  id: 1
-  login: quentin
-  email: quentin@example.com
-  salt: 7e3041ebc2fc05a40c60028e2c4901a81035d3cd
-  crypted_password: 00742970dc9e6319f8019fd54864d3ea740f04b1 # test
-  created_at: <%= 5.days.ago.to_s :db %>
-  activation_code: 8f24789ae988411ccf33ab0c30fe9106fab32e9b 
-  activated_at: <%= 5.days.ago.to_s :db %> 
+joe:
+  login: joe
+  #passsword: joe
+  email: joe@example.com
+  group_id: 2
   state: active
-aaron:
-  id: 2
-  login: aaron
-  email: aaron@example.com
-  salt: 7e3041ebc2fc05a40c60028e2c4901a81035d3cd
-  crypted_password: 00742970dc9e6319f8019fd54864d3ea740f04b1 # test
-  created_at: <%= 1.days.ago.to_s :db %>
-  activation_code: 8f24789ae988411ccf33ab0c30fe9106fab32e9a 
-  state: pending
+  salt: <%= salt = Digest::SHA1.hexdigest("--#{Time.now.to_s}--joe--") %> 
+  crypted_password: <%= Digest::SHA1.hexdigest("--#{salt}--joe--") %>
+
