--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -27,3 +27,12 @@ passive:
   salt: <%= salt = Digest::SHA1.hexdigest("--#{Time.now.to_s}--passive--") %> 
   crypted_password: <%= Digest::SHA1.hexdigest("--#{salt}--passive--") %>
 
+pending:
+  login: pending
+  email: pending@example.com
+  #password: passive
+  confirmation_code: <%= Digest::SHA1.hexdigest( Time.now.to_s.split(//).sort_by {rand}.join ) %>
+  state: pending
+  salt: <%= salt = Digest::SHA1.hexdigest("--#{Time.now.to_s}--passive--") %> 
+  crypted_password: <%= Digest::SHA1.hexdigest("--#{salt}--passive--") %>
+
