--- a/test/fixtures/user_password_resets.yml
+++ b/test/fixtures/user_password_resets.yml
@@ -1,4 +1,4 @@
 joe_password_reset:
-  user: joe
+  user_id: <%= Fixtures.identify :joe %>
   state: sent
   code: <%= Digest::SHA1.hexdigest( Time.now.to_s.split(//).sort_by {rand}.join ) %>
